# Ex4

./: CLI.cpp  CLI.h  CMakeLists.txt  Client.cpp  Command.h  Command1_UploadData.cpp  Command1_UploadData.h  Command2_AlgorithmSettings.cpp  Command2_AlgorithmSettings.h  Command3_ClassifyData.cpp  Command3_ClassifyData.h  Command4_DisplayResults.cpp  Command4_DisplayResults.h  Command5_downloadResults.cpp  Data.h  DataProcessor.cpp  DataProcessor.h  DefaultIO.h  KNeighborsClassifier.cpp  KNeighborsClassifier.h  Makefile  README.md  Server.cpp  Server.out  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h  client.cpp  distance_functions.cpp  distance_functions.h  input_validation.cpp  input_validation.h  iris_Unclassified.csv  main  main.cpp  server.cpp
includes/: KNeighborsClassifier.h  input_validation.h
